--- a/app/src/main/res/layout/first_field_list_item.xml
+++ b/app/src/main/res/layout/first_field_list_item.xml
@@ -14,6 +14,7 @@
             android:id="@+id/user_img"
             android:layout_width="130dp"
             android:layout_height="100dp"
+            android:scaleType="fitXY"
             android:src="@drawable/df"
             android:layout_centerInParent="true" />
 
