--- a/app/src/main/res/layout/activity_notices.xml
+++ b/app/src/main/res/layout/activity_notices.xml
@@ -10,7 +10,13 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textIsSelectable="true"
         android:gravity="center"
-        android:text=""
         android:padding="14dp"/>
+
+    <WebView
+        android:id="@+id/web_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"></WebView>
 </LinearLayout>
