--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -5,15 +5,10 @@
                 android:background="@android:color/white">
 
 
-    <WebView
+    <com.tencent.smtt.sdk.WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layerType="software"></WebView>
+        android:layerType="software"></com.tencent.smtt.sdk.WebView>
 
-    <FrameLayout
-        android:id="@+id/video_fullView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"></FrameLayout>
 </RelativeLayout>
