--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -12,7 +12,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_main"
             android:layout_width="match_parent"
-            android:layout_height="120dp"/>
+            android:layout_height="150dp"/>
 
         <LinearLayout
             android:id="@+id/ll_main_dot"
@@ -24,15 +24,19 @@
             android:orientation="horizontal"/>
     </RelativeLayout>
 
-    <TextView
+    <com.kingbox.view.ScrollingTextView
         android:id="@+id/boradcast_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/news_vp"
         android:drawableLeft="@drawable/broadcast_icon"
         android:drawablePadding="6dp"
+        android:ellipsize="marquee"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:marqueeRepeatLimit="marquee_forever"
         android:padding="8dp"
-        android:text="公告:帝王盒子上线啦"/>
+        android:singleLine="true"/>
 
     <TextView
         android:id="@+id/title_tv"
