--- a/app/src/main/res/layout/square_fragment.xml
+++ b/app/src/main/res/layout/square_fragment.xml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:focusableInTouchMode="true">
 
 
-
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/srl"
+    <com.kingbox.view.PullRecyclerView
+        android:id="@+id/live_square"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.kingbox.view.PullRecyclerView
-            android:id="@+id/live_square"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/line_tv"
-            android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        </com.kingbox.view.PullRecyclerView>
-    </android.support.v4.widget.SwipeRefreshLayout>
-
+    </com.kingbox.view.PullRecyclerView>
 
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="40dp"
         android:layout_centerInParent="true"
+        android:paddingTop="40dp"
         android:visibility="gone"/>
 </RelativeLayout>
